fix pedal sprite alignment and add another background img

--- a/harmony/static/css/harmony.css
+++ b/harmony/static/css/harmony.css
@@ -338,15 +338,15 @@ body {
 	width: 61px; /* NOTE: center pedal overrides the width */
 	height: 79px;
 }
-#kb-pedals .pedal-left { background-position: -21px -21px; }
+#kb-pedals .pedal-left { background-position: -21px -22px; }
 #kb-pedals .pedal-left:hover { background-position: -21px -121px; }
 #kb-pedals .pedal-left:active, #kb-pedals .pedal-left.pedal-active { background-position: -21px -221px; }
 
-#kb-pedals .pedal-center { background-position: -121px -21px; width: 50px; }
+#kb-pedals .pedal-center { background-position: -121px -22px; width: 50px; }
 #kb-pedals .pedal-center:hover { background-position: -121px -121px; width: 50px }
 #kb-pedals .pedal-center:active, #kb-pedals .pedal-center.pedal-active { background-position: -121px -221px; width: 50px; }
 
-#kb-pedals .pedal-right { background-position: -221px -21px; }
+#kb-pedals .pedal-right { background-position: -221px -22px; }
 #kb-pedals .pedal-right:hover { background-position: -221px -121px }
 #kb-pedals .pedal-right:active, #kb-pedals .pedal-right.pedal-active { background-position: -221px -221px }
 
